Removed shadow to prevent render issues on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -41,7 +41,6 @@ p,
     height    : calc(100vh - 25px);
     margin-top: 25px;
     visibility: hidden;
-    filter    : drop-shadow(10px 6px 10px rgba(0, 0, 0, .7));
 }
 
 .general-intro-wrapper {
